log/build_2023-11-02_00-40-56/manos_manager/stderr.log
  File "/home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager/mm.py", line 32
    self.subscriber = self.create_node(Pos, self.menuItem, TurtleSimControl.teleport_turtle,self.qos_profile))
                                                                                                             ^
SyntaxError: unmatched ')'

